--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+arrow==0.17.0
 certifi==2020.6.20
 chardet==3.0.4
 docutils==0.16
@@ -6,5 +7,7 @@ idna==2.10
 Kivy==2.0.0rc1
 Kivy-Garden==0.1.4
 Pygments==2.7.2
+python-dateutil==2.8.1
 requests==2.24.0
+six==1.15.0
 urllib3==1.25.11
